# btc-edge-lab

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: daily-trade.md
output/reports/: final_report.md
src/anomaly/: detector.py
src/common/: utils.py
src/fetcher/: binance_client.py
src/onchain/: analyzer.py  blockchain_client.py
src/report/: generator.py
src/technical/: indicators.py
src/trader/: __init__.py  engine.py  evaluator.py  signal_generator.py
